# Tredence-AI-Engineer-case-study

./: .gitignore  Makefile  README.md  pyproject.toml  report.md
.github/workflows/: ci.yml
src/: evaluate.py  model.py  train.py  utils.py
tests/: test_prunable.py
