[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# ─────────────────────────────────────────────
#  Project Metadata (PEP 621 compliant)
# ─────────────────────────────────────────────

[project]
name = "tredence-cifar10-pruning"
version = "0.1.0"
description = "Adaptive Differentiable Pruning for CIFAR-10 using P-Control Lambda Tuning."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Aditya", email = "adityamuthyala74@gmail.com" },
]
# The fix: dependencies is now a flat array directly under [project]
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "numpy>=2.1.0,<3.0",
    "matplotlib>=3.9.0,<4.0",
    "tqdm>=4.66.0,<5.0",
]

[project.urls]
Repository = "https://github.com/aditya3275/Tredence-AI-Engineer-case-study"

# ─────────────────────────────────────────────
#  Development / Tooling Dependencies
# ─────────────────────────────────────────────

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0",
    "black>=24.4.0",
    "isort>=5.13.0",
]

# ─────────────────────────────────────────────
#  Package Discovery
# ─────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ─────────────────────────────────────────────
#  Black — code formatter
# ─────────────────────────────────────────────

[tool.black]
line-length = 92
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | data
  | outputs
)/
'''

# ─────────────────────────────────────────────
#  isort — import sorter
# ─────────────────────────────────────────────

[tool.isort]
profile = "black"
line_length = 92
known_third_party = ["torch", "torchvision", "numpy", "matplotlib", "tqdm", "pytest"]
known_first_party = ["src"]

# ─────────────────────────────────────────────
#  pytest
# ─────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"